# helmholtz_spectra

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
env/: galapagos_noether
examples/mqgeometry_cornercut/: README.md  eigenmodes.sh  galapagos_env.sh  sim.py  sim.sh  spectra.py  spectra.sh  workflow.sh
examples/mqgeometry_dgirreg/: dg_irreg.py  galapagos_env.sh  reformat_hdf5.py  sim.py  sim.sh  spectra.sh  workflow.sh
examples/mqgeometry_simplenatl/: checkmask.py  eigenmodes.sh  natl.py  requirements.txt  sim.py  spectra.py  spectra.sh
helmholtz_spectra/: __init__.py  masks.py  nma.py  splig.py  tuml.py  utils.py
src/: laplacian_modes.c
